--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,13 +7,13 @@
 
 }
 
-body{
+body {
     background-color: #0000001f;
 }
 
-:root{
-    --mobile-h2-font-size: 2.2rem;
-    --dekstop-h2-fontsize : 2rem;
+:root {
+    --mobile-h2-font-size: 3rem;
+    --dekstop-h2-fontsize: 2rem;
 }
 
 /* Nav bar Starts From Here */
@@ -30,14 +30,17 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Semi-transparent black */
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 10px;
-    z-index: 4; /* Ensures the navbar is above other content */
-    backdrop-filter: blur(10px); /* Apply a blur effect */
+    z-index: 4;
+    /* Ensures the navbar is above other content */
+    backdrop-filter: blur(10px);
+    /* Apply a blur effect */
 }
 
 .navbar-logo img {
@@ -59,7 +62,11 @@ header {
 .navbar-links a {
     color: white;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 1.1rem;
+}
+
+span {
+    color: #FF9534;
 }
 
 .navbar-links a::after {
@@ -101,7 +108,8 @@ header {
     padding-top: 60px;
     transition: 0.3s;
     overflow-x: hidden;
-    backdrop-filter: blur(10px); /* Apply a blur effect */
+    backdrop-filter: blur(10px);
+    /* Apply a blur effect */
 }
 
 .sidebar a {
@@ -131,9 +139,11 @@ header {
 .hero-section {
     position: relative;
     width: 100%;
-    height: 80vh; /* Full viewport height */
+    height: 80vh;
+    /* Full viewport height */
     background: url('Assets/College/1.jpg') no-repeat center center;
-    background-size: cover; /* Make sure the image covers the entire section */
+    background-size: cover;
+    /* Make sure the image covers the entire section */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -149,7 +159,8 @@ header {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Dark overlay with 50% opacity */
+    background: rgba(0, 0, 0, 0.5);
+    /* Dark overlay with 50% opacity */
     z-index: 1;
 }
 
@@ -193,21 +204,24 @@ header {
         top: 0;
         left: 0;
         width: 100%;
-        background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+        background-color: rgba(0, 0, 0, 0.5);
+        /* Semi-transparent black */
         color: white;
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 10px;
-        z-index: 4; /* Ensures the navbar is above other content */
-        backdrop-filter: blur(10px); /* Apply a blur effect */
+        z-index: 4;
+        /* Ensures the navbar is above other content */
+        backdrop-filter: blur(10px);
+        /* Apply a blur effect */
     }
-    
+
     .navbar-logo img {
         height: 100px;
         cursor: pointer;
     }
-    
+
 }
 
 @media (max-width: 768px) {
@@ -286,6 +300,7 @@ header {
     color: rgba(255, 255, 255, 0.938);
 }
 
+
 @media (max-width: 768px) {
     .hero-content h1 {
         font-size: 4rem;
@@ -296,7 +311,21 @@ header {
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 1080px) {
+
+    .hero-section {
+        position: relative;
+        width: 100%;
+        height: 100vh;
+        background: url('Assets/Hero-img.jpg') no-repeat center center;
+        background-size: cover;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        text-align: center;
+    }
+
     .hero-content h1 {
         font-size: 2rem;
     }
@@ -304,14 +333,15 @@ header {
     .hero-content p {
         font-size: 1.2rem;
     }
-    
-.hero-content {
-    position: relative;
-    z-index: 2;
-    padding: 20px;
-    width: 90%;
+
+    .hero-content {
+        position: relative;
+        z-index: 2;
+        padding: 20px;
+        width: 100%;
+    }
 }
-}
+
 
 /* Hero Ends Here */
 
@@ -331,8 +361,15 @@ header {
 
 .main-heading {
     text-align: center;
-    font-size: 3.2rem;
+    font-size: 3rem;
     margin-bottom: 20px;
+    color: #FF9534;
+
+}
+
+.icon {
+    position: absolute;
+    z-index: 1000;
 }
 
 .gallery-container {
@@ -340,7 +377,8 @@ header {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 1400px; /* Adjust the max-width as needed */
+    max-width: 1400px;
+    /* Adjust the max-width as needed */
 }
 
 .gallery-section {
@@ -350,11 +388,13 @@ header {
 }
 
 .gallery-section h3 {
-    font-size: 2.9rem;
-    margin: 70px;
+    font-size: 2.4rem;
+    margin: 40px 70px;
     text-align: left;
     width: 100%;
-    max-width: 1200px; /* Adjust the max-width as needed */
+    max-width: 1200px;
+    color: #22343D;
+    /* Adjust the max-width as needed */
 }
 
 .gallery {
@@ -370,50 +410,64 @@ header {
     width: 300px;
     cursor: pointer;
     height: 300px;
-    transition: transform 0.3s ease; /* Smooth transition for the transform */
-    object-fit: cover; /* Ensure the image covers the area without stretching */
-    
+    transition: transform 0.3s ease;
+    /* Smooth transition for the transform */
+    object-fit: cover;
+    /* Ensure the image covers the area without stretching */
+
 }
 
 .gallery img:hover {
-    transform: scale(1.25) translateY(-10px); /* Scale the image and move it up on hover */
+    transform: scale(1.25) translateY(-10px);
+    /* Scale the image and move it up on hover */
 }
 
 @media (max-width: 768px) {
     .gallery img {
-        width: 150px; /* Adjust image size for tablets */
-        height: 150px;
+        width: 240px;
+        height: 240px;
+     
     }
 
     .gallery img:hover {
-        transform: scale(1.33) translateY(-5px); /* Adjust scale and move up on hover for tablets */
+        transform: scale(1.33) translateY(-5px);
+        /* Adjust scale and move up on hover for tablets */
     }
 
     .main-heading {
-        font-size: 2rem;
+        font-size: var(--mobile-h2-font-size);
     }
 
     .gallery-section h3 {
-        font-size: 1.5rem;
+        font-size: 1.9rem;
     }
 }
 
 @media (max-width: 480px) {
     .gallery img {
-        width: 200px; /* Adjust image size for mobile devices */
-        height: 200px;
+        width: 270px;
+        height: 270px;
     }
 
     .gallery img:hover {
-        transform: scale(1.5) translateY(-3px); /* Adjust scale and move up on hover for mobile devices */
+        transform: scale(1.5) translateY(-3px);
+        /* Adjust scale and move up on hover for mobile devices */
     }
 
     .main-heading {
-        font-size: 1.5rem;
+        font-size: var(--mobile-h2-font-size);
     }
 
     .gallery-section h3 {
-        font-size: 1.25rem;
+        font-size: 2rem;
+        margin: 20px 40px;
+        text-align: left;
+        width: 100%;
+        max-width: 1200px;
+        color: #22343D;
+        /* Adjust the max-width as needed */
+
     }
 }
+
 /* gallery Ends Here */
