--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,12 @@ body {
     --dekstop-h2-fontsize: 2rem;
 }
 
+hr{
+    background-color: black;
+    height: 2px;
+    width: 100%;
+}
+
 /* Nav bar Starts From Here */
 
 
@@ -362,9 +368,15 @@ span {
 .main-heading {
     text-align: center;
     font-size: 3rem;
-    margin-bottom: 20px;
     color: #FF9534;
 
+}
+
+.underine{
+    width: 80px;
+    margin: 0px auto;
+    background-color: black;
+    height: 2px;
 }
 
 .icon {
@@ -389,7 +401,7 @@ span {
 
 .gallery-section h3 {
     font-size: 2.4rem;
-    margin: 40px 70px;
+    margin: 50px 70px;
     text-align: left;
     width: 100%;
     max-width: 1200px;
